--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
 
-    <title></title>
+    <title>Mirror</title>
 
   </head>
 
